--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./dist/index.js",
-    "start": "node dist/index.js",
+    "start": "node public/index.js",
     "build": "tsc"
   },
   "repository": {
