--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "homepage": "https://github.com/sfxgizuka/chat-api#readme",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
     "@types/jsonwebtoken": "^9.0.2",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
