--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./dist/index.js",
     "start": "node public/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "vercel-build":"echo hello"
   },
   "repository": {
     "type": "git",
