Api almost done

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
       // "module": "commonjs",
-      "outDir": "./public",
+      // "outDir": "./public",
+      "outDir": "./dist",
       "rootDir": "./src",
       // "strict": true,
       // "esModuleInterop": true
