--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon ./dist/index.js",
     "start": "node dist/index.js",
     "build": "tsc",
-    "vercel-build":"echo hello"
+    "vercel-build": "echo hello"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.10.0",
     "jsonwebtoken": "^9.0.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
